Fixed weird spacing for Navbar Changed CSS display element to block

--- a/my-app/src/Component/Navbar/Logo.css
+++ b/my-app/src/Component/Navbar/Logo.css
@@ -1,4 +1,5 @@
 .Logo {
     background-color: wheat;
-    justify-content: flex-start;
+    padding: 10px;
+    margin: 0cm;
 }
