--- a/my-app/src/Component/Navbar/Tab.css
+++ b/my-app/src/Component/Navbar/Tab.css
@@ -2,12 +2,13 @@
     display:flex;
     flex-direction: row;
     list-style: none;
+    margin: 0cm;
+    padding-inline-start: 0px;
 }
 
 .navbar-links {
+    display: block;
     background-color: green;
-    justify-content: flex-end;
-    padding-top:10px;
-    padding-bottom:10px;
-    padding-inline: 5px;
+    padding: 10px;
+    margin: 0cm;
 }
